tests/fails/f23.t

terra foo()
    @(3) = 4
end
foo()